# Tools

barcode_read_splitter/: CMakeLists.txt  hashtable.c  hashtable.h  main.c  mystrio.c
fasta_scan_with_re/: CMakeLists.txt  dataio.c  dataio.h  main.c  sequences.c  sequences.h
fasta_scan_with_wm/: CMakeLists.txt  dataio.c  main.c  sequences.c  sequences.h
generate_count_table_bamfile/: CMakeLists.txt  dataio.c  dataio.h  hashtable.c  hashtable.h  information.c  information.h  main.cpp  readio.c  readio.h  sequences.c  sequences.h  statistics.c  statistics.h
get_seq_from_fasta/: CMakeLists.txt  main.c
iTEISER/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  combine_motifs.c  combine_motifs_from_files.c  combine_motifs_into_file.c  create_motifs.c  create_motifs.h  dataio.c  final_motif_motif_interaction.c  find_threshold_for_mi_values.c  folding_energy.c  folding_energy.h  get_motif_at_index.c  get_variant_family_for_structural_motif.c  hashtable.c  hashtable.h  make_variant_family_for_structural_motif.c  manual_mutations_in_a_motif.c  match_motif_to_seq.c  matchmaker.c  matchmaker.h  mi_cond_inf_ratio.c  mi_conserve.c  mi_find_seed.c  mi_library.c  mi_mi_seed.c  mi_motif_motif_interaction.c  mi_optimize.c  mi_report.c  mi_report_gene_list.c  mi_report_motif_family.c  mi_report_motif_family_count_based.c  motif_page_run.c  nucleotides.h  partition_seeds.c  print_motifs.c  readFASTA.c  read_write_motif.c  (+9 more)
split_reads_by_length/: CMakeLists.txt  main.c  mystrio.h
